Add Swagger plugin
