# app/Http/Controllers/Controller.php
@@ -6,14 +6,31 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+
 /**
-*  @OA\Info(title="Api for tennis tournament challenge", version="1.0",  description="Tournaments Actions" )
-*   OA\Server(url: 'http://localhost:8000', description: "local server"),
-*   OA\Server(url: 'http://staging.example.com', description: "staging server"),
-*   OA\Server(url: 'http://example.com', description: "production server"),
-*   OAS\SecurityScheme( securityScheme: 'bearerAuth', type: "http", name: "Authorization", in: "header", scheme: "bearer")
-*
-*/
+ *  @OA\Info(
+ *     version="v1.9.0",
+ *     title="Tennis tournament → API-REST Documentation",
+ *     description="**API-REST:** Admin for tennis tournament",
+ * ),
+ *
+ *
+ * @OA\Server(
+ *     url="http://localhost:8000",
+ *     description="Local Server"
+ * ),
+ *
+ *
+ * @OA\SecurityScheme(
+ *     securityScheme="bearerAuth",
+ *     in="header",
+ *     name="bearerAuth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ * )
+ * */
+
 class Controller extends BaseController
 {
     use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
